[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellgenius"
version = "0.2.1"
description = "ShellGenius is a tool to generate shell commands from description in natural language."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sébastien De Revière"},
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "openai>=2,<3",
    "pygments>=2.20",
    "requests>=2.33",
    "rich",
    "tiktoken",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
shellgenius = "shellgenius._entrypoint:main"

[project.entry-points."pygments.styles"]
alabaster = "shellgenius.theme:AlabasterStyle"

[project.urls]
Homepage = "https://github.com/sderev/shellgenius"
Repository = "https://github.com/sderev/shellgenius"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff==0.15.8",
    "scriv[toml]>=1.8,<2",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "real: tests that call external services or require live credentials",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]

[tool.scriv]
changelog = "CHANGELOG.md"
format = "md"
fragment_directory = "changelog.d"
md_header_level = 2
new_fragment_template = "file: new_fragment.md.j2"
version = "literal: pyproject.toml: project.version"
